Fix accessing active node state from the Python scripts

BUG:495811